--- a/01_Create_polygon_mask.ipynb
+++ b/01_Create_polygon_mask.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "12a23bed-0c8b-49ba-92d5-f2c651d95409",
    "metadata": {
     "tags": []
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "f7af498b-48de-45bb-9980-fd2fc3a0b3aa",
    "metadata": {
     "tags": []
@@ -89,10 +89,10 @@
       "1254 polygons loaded\n",
       "0 empty polygons removed from OFS\n",
       "GEEID field already exists in polygon layer\n",
-      "3 Sentinel-2 tiles found:\n",
-      "['c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Sentinel2_tiles\\\\20231213T001111_20231213T001105_T55JGG.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Sentinel2_tiles\\\\20231213T001111_20231213T001105_T55JGJ.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Sentinel2_tiles\\\\20231213T001111_20231213T001105_T56JKL.tif']\n",
-      "3 Landsat tiles found:\n",
-      "['c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Landsat_tiles\\\\LC08_091080_20231115.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Landsat_tiles\\\\LC09_092081_20231115.tif', 'c:\\\\Shirui_Hao\\\\GitHub\\\\time-series-OFS\\\\inputs\\\\Landsat_tiles\\\\LC09_092083_20231115.tif']\n"
+      "2 Sentinel-2 tiles found:\n",
+      "['20231213T001111_20231213T001105_T55JGH.tif', 'T55JGH']\n",
+      "2 Landsat tiles found:\n",
+      "['C:\\\\Users\\\\vosk01\\\\Documents\\\\Github\\\\time-series-OFS\\\\inputs\\\\Landsat_tiles\\\\LC08_091080_20231115.tif', 'C:\\\\Users\\\\vosk01\\\\Documents\\\\Github\\\\time-series-OFS\\\\inputs\\\\Landsat_tiles\\\\LC08_L1TP_091080_20231115_20231122_02_T1_B2.TIF']\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
     "\n",
     "# load Sentinel-2 tiles\n",
     "fp_tiles_S2 = os.path.join(fp_inputs,'Sentinel2_tiles')\n",
-    "fn_tiles_S2 = glob.glob(f'{fp_tiles_S2}/*.tif')\n",
+    "fn_tiles_S2 = os.listdir(fp_tiles_S2)\n",
     "print('%d Sentinel-2 tiles found:'%len(fn_tiles_S2))\n",
     "print(fn_tiles_S2)\n",
     "fp_out_tiles_S2 = os.path.join(fp_outputs,'polygon_masks','Sentinel2_tiles_mask')\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8d644ae6-d614-4575-b915-4d32c171d061",
    "metadata": {
     "tags": []
@@ -192,31 +192,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3ff99b3b-a512-4e6b-82f6-d83c7920e9f3",
+   "execution_count": 57,
+   "id": "b77ca4da",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processing 55JGH ...\n",
-      "Image EPSG:32755\n",
-      "coordinates are in epsg:32655\n",
-      "coordinates converted to in epsg:32755\n",
-      "Adding polygon 561/561"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for fp_image in fn_tiles_S2:\n",
-    "    tile_name = fp_image.split('/')[-1].split('.')[0].split('_')[-1][1:]\n",
-    "    print('\\nProcessing %s ...'%tile_name)\n",
-    "    # load band\n",
-    "    data = gdal.Open(fp_image, gdal.GA_ReadOnly)\n",
+    "for fn in fn_tiles_S2:\n",
+    "    # check whether the filepath is a single tif file from GEE or folder from USGS\n",
+    "    if '.tif' in fn:\n",
+    "        tile_name = fn.split(os.sep)[-1].split('.')[0].split('_')[-1][1:]\n",
+    "        full_path_to_image = os.path.join(fp_tiles_S2,fn)\n",
+    "        print('\\nProcessing %s (downloaded from GEE)...'%tile_name)\n",
+    "    else:\n",
+    "        tile_name = fn.split('T')[-1]\n",
+    "        all_files = list_files_recursive(os.path.join(fp_tiles_S2,fn))\n",
+    "        full_path_to_image = [_ for _ in all_files if np.logical_and('_B02.jp2' in _,'IMG_DATA' in _)][0]\n",
+    "        print('\\nProcessing %s (downloaded from USGS Earth Explorer)...'%tile_name)\n",
+    "        \n",
+    "    # check if output already exists\n",
+    "    fn_im_labelled = os.path.join(fp_out_tiles_S2, tile_name + '_polygon_mask.tif')\n",
+    "    if os.path.exists(fn_im_labelled):\n",
+    "        print('Skipping %s, polygon mask already exists'%fn)\n",
+    "        continue\n",
+    "        \n",
+    "    # load input scene\n",
+    "    data = gdal.Open(full_path_to_image, gdal.GA_ReadOnly)\n",
     "    georef = np.array(data.GetGeoTransform())\n",
     "    bands = [data.GetRasterBand(k + 1).ReadAsArray() for k in range(data.RasterCount)]\n",
     "    im = bands[0]\n",
@@ -265,10 +267,8 @@
     "            # add to mask\n",
     "            im0 += mask_label\n",
     "            \n",
-    "    # write to a tif file\n",
-    "    fn_image = os.path.basename(fp_image).replace('.jp2','.tif')\n",
-    "    fn_im_labelled = os.path.join(fp_out_tiles_S2, fn_image)\n",
     "    # write with rasterio\n",
+    "    # subtract half a pixel to the top left coordinates\n",
     "    georef2 = from_origin(georef[0]-georef[1]/2, georef[3]-georef[5]/2, georef[1], georef[1])\n",
     "    metadata = {\n",
     "        'driver': 'GTiff',\n",
@@ -277,7 +277,7 @@
     "        'width': im0.shape[1],\n",
     "        'height': im0.shape[0],\n",
     "        'crs': 'EPSG:%d'%epsg_image,\n",
-    "    'transform': georef2,\n",
+    "        'transform': georef2,\n",
     "        'compress': 'lzw',\n",
     "    }\n",
     "    with rasterio.open(fn_im_labelled, 'w', **metadata) as dst:\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "01bb5816-053e-4bee-8215-5e7d2d0a300a",
    "metadata": {
     "tags": []
@@ -310,23 +310,36 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "Processing 091080 (downloaded from GEE)...\n",
+      "\n",
       "Image EPSG:32655\n",
-      "coordinates are in epsg:4326\n",
+      "coordinates are in epsg:32755\n",
       "coordinates converted to in epsg:32655\n",
       "Adding polygon 1254/1254\n",
-      "Image EPSG:32655\n",
-      "coordinates are in epsg:32655\n",
-      "Adding polygon 1254/1254\n",
-      "Image EPSG:32655\n",
-      "coordinates are in epsg:32655\n",
-      "Adding polygon 1254/1254"
+      "Processing 091080 (downloaded from USGS Earth Explorer)...\n",
+      "Skipping C:\\Users\\vosk01\\Documents\\Github\\time-series-OFS\\inputs\\Landsat_tiles\\LC08_L1TP_091080_20231115_20231122_02_T1_B2.TIF, polygon mask already exists\n"
      ]
     }
    ],
    "source": [
-    "for fp_im in fn_tiles_L:\n",
-    "    # load tile\n",
-    "    data = gdal.Open(fp_im, gdal.GA_ReadOnly)\n",
+    "for fn in fn_tiles_L:\n",
+    "    # check whether the filename is from GEE or from USGS\n",
+    "    img_name = fn.split(os.sep)[-1]\n",
+    "    if len(img_name) == 24:\n",
+    "        tile_name = img_name.split('_')[1]\n",
+    "        print('\\nProcessing %s (downloaded from GEE)...'%tile_name)\n",
+    "    else:\n",
+    "        tile_name = img_name.split('_')[2]\n",
+    "        print('\\nProcessing %s (downloaded from USGS Earth Explorer)...'%tile_name)\n",
+    "        \n",
+    "    # check if output already exists\n",
+    "    fn_im_labelled = os.path.join(fp_out_tiles_L, tile_name + '_polygon_mask.tif')\n",
+    "    if os.path.exists(fn_im_labelled):\n",
+    "        print('Skipping %s, polygon mask already exists'%fn)\n",
+    "        continue\n",
+    "        \n",
+    "    # load scene\n",
+    "    data = gdal.Open(fn, gdal.GA_ReadOnly)\n",
     "    georef = np.array(data.GetGeoTransform())\n",
     "    bands = [data.GetRasterBand(k + 1).ReadAsArray() for k in range(data.RasterCount)]\n",
     "    im = bands[0]\n",
@@ -375,10 +388,9 @@
     "            # add to mask\n",
     "            im0 += mask_label\n",
     "    \n",
-    "    # write to a tif file\n",
-    "    fn_tile = os.path.basename(fp_im)\n",
-    "    fn_im_labelled = os.path.join(fp_out_tiles_L, fn_tile)\n",
+    "\n",
     "    # write with rasterio\n",
+    "    # subtract half a pixel to the top left coordinates\n",
     "    georef2 = from_origin(georef[0]-georef[1]/2, georef[3]-georef[5]/2, georef[1], georef[1])\n",
     "    metadata = {\n",
     "        'driver': 'GTiff',\n",
@@ -410,7 +422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_Proj",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -424,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
