rename the collection to match the JS scripts

--- a/03_Upload_bucket_to_EE_asset.ipynb
+++ b/03_Upload_bucket_to_EE_asset.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 1343,
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 13867,
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -87,7 +87,23 @@
     "outputId": "0c47fe85-1787-4bb2-dea6-9c9e28adaed1",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your browser has been opened to visit:\n",
+      "\n",
+      "    https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=32555940559.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8085%2F&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fsqlservice.login+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&state=hoQ3jUHiRkI3ik0AmXf6UkmdT5GgoE&access_type=offline&code_challenge=0OhbUGM0kdM17QnIfj2gP-O01_BuffJ_tFK3MpoGEs0&code_challenge_method=S256\n",
+      "\n",
+      "\n",
+      "You are now logged in as [kilian.vos@dpie.nsw.gov.au].\n",
+      "Your current project is [nsw-dpe-gee-tst].  You can change this setting by running:\n",
+      "  $ gcloud config set project PROJECT_ID\n",
+      "Updated property [core/project].\n"
+     ]
+    }
+   ],
    "source": [
     "! gcloud auth login\n",
     "! gcloud config set project nsw-dpe-gee-tst"
@@ -102,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 348,
@@ -163,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -202,21 +218,23 @@
     "# GEE Assets args set up\n",
     "PROJ_NAME = 'nsw-dpe-gee-tst'\n",
     "ASSETS_SUB_FOLDER = 'OFS' # Can be nested folder, e.g., OFS/sub_folder\n",
-    "IMAGE_COLLECTION_NAME = f'exp_baseOFS_{sat_name}_tiles'\n",
+    "IMAGE_COLLECTION_NAME = f'base_{sat_name}_tiles'\n",
     "\n",
     "image_collection_id = f'projects/{PROJ_NAME}/assets/{ASSETS_SUB_FOLDER}/{IMAGE_COLLECTION_NAME}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted existing asset at projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles, proceeding to create a new one\n"
+      "No existing asset found at projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles, proceeding to create a new one\n"
      ]
     },
     {
@@ -225,10 +243,10 @@
        "{'type': 'IMAGE_COLLECTION',\n",
        " 'name': 'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles',\n",
        " 'id': 'projects/nsw-dpe-gee-tst/assets/OFS/exp_baseOFS_Landsat_tiles',\n",
-       " 'updateTime': '2024-08-22T09:02:26.675812Z'}"
+       " 'updateTime': '2024-08-28T03:58:36.944791Z'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 2147,
@@ -302,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "executionInfo": {
      "elapsed": 9812,
@@ -364,6 +382,13 @@
     "    ee.data.startIngestion(request_id=reqID, params=params)\n",
     "print('%d polygon masks uploaded to GEE Assets under %s'%(len(upload_lst),image_collection_id))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -386,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
