--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -29,3 +29,24 @@
   year={2022},
   publisher={Nature Publishing Group UK London}
 }
+
+@article{xu2006modification,
+  title={Modification of normalised difference water index (NDWI) to enhance open water features in remotely sensed imagery},
+  author={Xu, Hanqiu},
+  journal={International journal of remote sensing},
+  volume={27},
+  number={14},
+  pages={3025--3033},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
+
+@article{otsu1975threshold,
+  title={A threshold selection method from gray-level histograms},
+  author={Otsu, Nobuyuki and others},
+  journal={Automatica},
+  volume={11},
+  number={285-296},
+  pages={23--27},
+  year={1975}
+}
