small bug fix on variable name

--- a/02_Upload_polygon_mask_to_bucket.ipynb
+++ b/02_Upload_polygon_mask_to_bucket.ipynb
@@ -269,7 +269,7 @@
     }
    ],
    "source": [
-    "for fn in fn_tiles_S2:\n",
+    "for fn in fn_tiles:\n",
     "    base_name = os.path.basename(fn)\n",
     "    destination_blob = f'{SATELLITE_FOLDER}/{base_name}'\n",
     "    upload_blob(BUCKET_NAME, fn, destination_blob)"
@@ -336,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
