final read by Kilian
I edited a few little things and added 3-4 extra references. Ready to submit IMO

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -50,3 +50,36 @@
   pages={23--27},
   year={1975}
 }
+
+@article{gosling2016global,
+  title={A global assessment of the impact of climate change on water scarcity},
+  author={Gosling, Simon N and Arnell, Nigel W},
+  journal={Climatic Change},
+  volume={134},
+  pages={371--385},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{CALKOEN2024106257,
+title = {Enabling coastal analytics at planetary scale},
+journal = {Environmental Modelling & Software},
+pages = {106257},
+year = {2024},
+issn = {1364-8152},
+doi = {https://doi.org/10.1016/j.envsoft.2024.106257},
+url = {https://www.sciencedirect.com/science/article/pii/S1364815224003189},
+author = {Floris Reinier Calkoen and Arjen Pieter Luijendijk and Kilian Vos and Etiënne Kras and Fedor Baart},
+keywords = {Coastal analytics, Cloud technology, Coastal change, Coastal monitoring, Satellite-derived shorelines, Low elevation coastal zone, Data management},
+abstract = {Coastal science has entered a new era of data-driven research, facilitated by satellite data and cloud compute. Despite its potential, the coastal community has yet to fully capitalize on these advancements due to a lack of tailored data, tools, and models. This paper demonstrates how cloud technology can advance coastal analytics at scale. We introduce GCTS, a novel foundational dataset comprising over 11 million coastal transects at 100-meter resolution. Our experiments highlight the importance of cloud-optimized data formats, geospatial sorting, and metadata-driven data retrieval. By leveraging cloud technology, we achieve up to 700 times faster performance for tasks like coastal waterline mapping. A case study reveals that 33% of the world’s first kilometer of coast is below 5 meters, with the entire analysis completed in a few hours. Our findings make a compelling case for the coastal community to start producing data, tools, and models suitable for scalable coastal analytics.}
+}
+
+@article{gorelick2017google,
+  title={Google Earth Engine: Planetary-scale geospatial analysis for everyone},
+  author={Gorelick, Noel and Hancher, Matt and Dixon, Mike and Ilyushchenko, Simon and Thau, David and Moore, Rebecca},
+  journal={Remote sensing of Environment},
+  volume={202},
+  pages={18--27},
+  year={2017},
+  publisher={Elsevier}
+}
