--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -5,6 +5,7 @@
   volume={143},
   pages={105095},
   year={2021},
+  doi = {https://doi.org/10.1016/j.envsoft.2021.105095},
   publisher={Elsevier}
 }
 
@@ -16,6 +17,7 @@
   number={18},
   pages={3681},
   year={2021},
+  doi = {https://doi.org/10.3390/rs13183681},
   publisher={Mdpi}
 }
 
@@ -27,6 +29,7 @@
   number={1},
   pages={13776},
   year={2022},
+  doi = {https://doi.org/10.1038/s41598-022-17074-6},
   publisher={Nature Publishing Group UK London}
 }
 
@@ -38,6 +41,7 @@
   number={14},
   pages={3025--3033},
   year={2006},
+  doi = {https://doi.org/10.1080/01431160600589179},
   publisher={Taylor \& Francis}
 }
 
@@ -48,7 +52,8 @@
   volume={11},
   number={285-296},
   pages={23--27},
-  year={1975}
+  year={1975},
+  doi = {https://doi.org/10.1109/TSMC.1979.4310076}
 }
 
 @article{gosling2016global,
@@ -58,7 +63,8 @@
   volume={134},
   pages={371--385},
   year={2016},
-  publisher={Springer}
+  publisher={Springer},
+  doi = {https://doi.org/10.1007/s10584-013-0853-x}
 }
 
 @article{CALKOEN2024106257,
@@ -81,5 +87,6 @@ abstract = {Coastal science has entered a new era of data-driven research, facil
   volume={202},
   pages={18--27},
   year={2017},
+  doi = {https://doi.org/10.1016/j.rse.2017.06.031},
   publisher={Elsevier}
 }
