--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -5,7 +5,7 @@
   volume={143},
   pages={105095},
   year={2021},
-  doi = {https://doi.org/10.1016/j.envsoft.2021.105095},
+  doi = {10.1016/j.envsoft.2021.105095},
   publisher={Elsevier}
 }
 
@@ -17,7 +17,7 @@
   number={18},
   pages={3681},
   year={2021},
-  doi = {https://doi.org/10.3390/rs13183681},
+  doi = {10.3390/rs13183681},
   publisher={Mdpi}
 }
 
@@ -29,7 +29,7 @@
   number={1},
   pages={13776},
   year={2022},
-  doi = {https://doi.org/10.1038/s41598-022-17074-6},
+  doi = {10.1038/s41598-022-17074-6},
   publisher={Nature Publishing Group UK London}
 }
 
@@ -41,7 +41,7 @@
   number={14},
   pages={3025--3033},
   year={2006},
-  doi = {https://doi.org/10.1080/01431160600589179},
+  doi = {10.1080/01431160600589179},
   publisher={Taylor \& Francis}
 }
 
@@ -53,7 +53,7 @@
   number={285-296},
   pages={23--27},
   year={1975},
-  doi = {https://doi.org/10.1109/TSMC.1979.4310076}
+  doi = {10.1109/TSMC.1979.4310076}
 }
 
 @article{gosling2016global,
@@ -64,7 +64,7 @@
   pages={371--385},
   year={2016},
   publisher={Springer},
-  doi = {https://doi.org/10.1007/s10584-013-0853-x}
+  doi = {10.1007/s10584-013-0853-x}
 }
 
 @article{CALKOEN2024106257,
@@ -73,7 +73,7 @@ journal = {Environmental Modelling & Software},
 pages = {106257},
 year = {2024},
 issn = {1364-8152},
-doi = {https://doi.org/10.1016/j.envsoft.2024.106257},
+doi = {10.1016/j.envsoft.2024.106257},
 url = {https://www.sciencedirect.com/science/article/pii/S1364815224003189},
 author = {Floris Reinier Calkoen and Arjen Pieter Luijendijk and Kilian Vos and Etiënne Kras and Fedor Baart},
 keywords = {Coastal analytics, Cloud technology, Coastal change, Coastal monitoring, Satellite-derived shorelines, Low elevation coastal zone, Data management},
@@ -87,6 +87,6 @@ abstract = {Coastal science has entered a new era of data-driven research, facil
   volume={202},
   pages={18--27},
   year={2017},
-  doi = {https://doi.org/10.1016/j.rse.2017.06.031},
+  doi = {10.1016/j.rse.2017.06.031},
   publisher={Elsevier}
 }
